WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301985
REGRESSION(
301467@main
): [GTK3] 2.51.1 - cursor doesn't change when hovering on link
https://bugs.webkit.org/show_bug.cgi?id=301985
Summary
REGRESSION(301467@main): [GTK3] 2.51.1 - cursor doesn't change when hovering ...
enometh
Reported
2025-11-04 20:25:30 PST
Hello, with webkit2gtk-4.1 api on2.51.1 the cursor no longer changes cursor when hovering over a link
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-11-10 00:30:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53667
EWS
Comment 2
2025-11-10 01:42:59 PST
Committed
302790@main
(94dc4877f3e8): <
https://commits.webkit.org/302790@main
> Reviewed commits have been landed. Closing PR #53667 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug