REGRESSION(301467@main): [GTK3] 2.51.1 - cursor doesn't change when hovering on link https://bugs.webkit.org/show_bug.cgi?id=301985

Reviewed by Adrian Perez de Castro.

Only return early when current cursor is nullptr and new one is the
default, since in GTK3 nullptr is the default cursor.

Canonical link: https://commits.webkit.org/302790@main